# arkanoid-snake-sfml-games

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  readme.md
arkanoid/: Bonus.h  CMakeLists.txt  IBonusOwner.h  IDestructible.h  IHaveParent.h  IObjectFactory.h  IStaticObject.h  LevelGenerator.h  MathVector.h  ObjectFactory.cpp  ObjectFactory.h  PauseMenu.h  Plate.cpp  State.h  World.h  arkanoid-uml.drawio  arkanoid_pch.cpp  arkanoid_pch.h  main.cpp  readme.md
arkanoid/config/: config.json  config.txt
arkanoid/src/: ArkanoidPch.cpp  ArkanoidPch.h  Ball.cpp  Ball.h  Bonus.cpp  Bonus.h  BonusType.cpp  BonusType.h  Brick.cpp  Brick.h  Collision.cpp  Collision.h  CollisionBucket.cpp  CollisionBucket.h  CustomFormatters.h  DefaultObject.cpp  DefaultObject.h  Flier.cpp  Flier.h  HelperFunctions.cpp  HelperFunctions.h  IDynamicObject.h  ILevelGenerator.h  IMovableObject.h  IObject.h  IObjectFactory.h  IWorld.h  LevelGenerator.cpp  LevelGenerator.h  MathVector.cpp  MathVector.h  ObjectFactory.cpp  ObjectState.cpp  ObjectState.h  Paddle.cpp  Paddle.h  PauseMenu.cpp  PauseMenu.h  Plate.cpp  Plate.h  (+7 more)
docs/: glm_functions.md
game_pch/: GameCommonPch.h  GamePch.h  GameSdlPch.cpp  GameSdlPch.h  GameSfmlPch.cpp  GameSfmlPch.h
game_template/: CMakeLists.txt
game_template/src/: Game.cpp  Game.h  main.cpp
libraries_tests/: CMakeLists.txt
libraries_tests/daw_json_example/: daw_json_example.cpp
libraries_tests/glm_moving_ball_example/: CMakeLists.txt  glm_moving_ball_example.cpp
libraries_tests/libs_tests/: CMakeLists.txt  glm_random_numbers_test.cpp  nlohmann_json_test.cpp
libraries_tests/nlohmann_json_example/: nlohmann_json_example.cpp
library_samples/: CMakeLists.txt
library_samples/daw_json_example/: CMakeLists.txt
library_samples/daw_json_sample/: CMakeLists.txt
library_samples/glm_geometry_example/: CMakeLists.txt  glm_geometry_example.cpp
library_samples/glm_moving_ball_example/: glm_moving_ball_example.cpp
library_samples/nlohmann_json_example/: CMakeLists.txt  nlohmann_json_example.cpp
sdl_game_template/: CMakeLists.txt
sdl_game_template/src/: Game.cpp  Game.h  InputHandler.h  main.cpp
sfml_game_template/: CMakeLists.txt
sfml_game_template/config/: config.json
sfml_game_template/src/: Game.h  InputHandler.cpp  main.cpp
snake/: CMakeLists.txt  readme.md
snake/config/: config.json
snake/src/: Food.cpp  Food.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  ScopeBoard.cpp  ScopeBoard.h  Snake.cpp  Snake.h  main.cpp
utils/: CMakeLists.txt  Config.h  CustomFormatters.h  GamePch.h  JsonLoader.h  Logger.h
utils/include/utils/: Config.h  CustomFormatters.h  Direction.h  GeometryUtils.h  GlmToSfmlOperators.h  JsonFormatter.h  JsonFormatterUserDefined.h  JsonLoader.h  Logger.h  MathUtils.h  MathVector.h  StringUtils.h  SystemUtils.h
utils/src/: Config.cpp  Direction.cpp  GeometryUtils.cpp  GlmToSfmlOperators.cpp  JsonLoader.cpp  MathVector.cpp  SystemUtils.cpp
utils_examples/: CMakeLists.txt
utils_examples/config_controls_example/: CMakeLists.txt  config_controls_example.cpp
utils_examples/utils_config_example/: CMakeLists.txt  config_example.cpp  json_config_example.cpp
utils_tests/: CMakeLists.txt
utils_tests/config_tests/: CMakeLists.txt  fmt_format_tests.cpp  json_config_basic_types.cpp  json_config_read_3rdparty_stucts.cpp  json_config_read_complex_stucts.cpp  json_config_read_custom_structs.cpp  json_config_read_enums.cpp
utils_tests/math_tests/: CMakeLists.txt  NoRepeatableRandomsTests.cpp  math_tests.cpp
